# notes-app-hybrid-search

./: .gitignore  README.md  justfile  pyproject.toml
data/01-from-notes-app-to-plaintext/: config.toml  headers.txt  justfile  main.py  steps.md
data/02-plaintext-to-embeddings/: config.toml  justfile  main.py  steps.txt
data/02-plaintext-to-vespa-documents/: config.toml  main.py
data/03-embeddings-to-vespa-documents/: config.toml  justfile  main.py
data/03-huggingface-hub-to-local/: config.toml  justfile  main.py
data/04-huggingface-hub-to-local/: main.py
data/from-notes-app-to-plaintext/: steps.md
data/plaintext-to-embeddings/: main.py
search/: config.toml  docker-compose.yml  justfile  main.py
search/app/: services.xml
search/app/schemas/: entries.sd
